Scroll does not work with IBM Thinkpad. <https://bugs.webkit.org/show_bug.cgi?id=14227> <rdar://7142545>

Reviewed by Steve Falkenburg.

When initializing the WebView, add two scrollbar Windows inside of
our WebView, to allow it to receive WM_VSCROLL and WM_HSCROLL events.
(similar to what Firefox did in: <https://bugzilla.mozilla.org/show_bug.cgi?id=507222>.

Only do this if the user has installed some kind of Trackpoint driver, using an algorithm
like <https://bugzilla.mozilla.org/show_bug.cgi?id=514927>.

Also, add code to handle WM_HSCROLL and WM_VSCROLL messages to scroll
the WebView.

* WebView.cpp:
(WebView::verticalScroll): Handle the WM_VSCROLL messages, and scroll up and down
    by lines or pages.
(WebView::horizontalScroll): Handle the WM_HSCROLL messages, and scroll left or right
    by lines or pages.
(WebView::WebViewWndProc): Add cases for WM_VSCROLL and WM_HSCROLL.
(WebView::initWithFrame): Call shouldInitializeTrackPointHack, and if we should, create
    vertical and horizontal scrollbars to receive WM_VSCROLL and WM_HSCROLL messages.
(WebView::shouldInitializeTrackPointHack): Check if there is a registry key for
    the some kind of IBM Trackpoint driver.
* WebView.h:



Canonical link: https://commits.webkit.org/45636@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@54293 268f45cc-cd09-0410-ab3c-d52691b4dbfc