WebKit/win/WebView.h
@@ -793,6 +793,8 @@ public:
     bool onUninitMenuPopup(WPARAM, LPARAM);
     void performContextMenuAction(WPARAM, LPARAM, bool byPosition);
     bool mouseWheel(WPARAM, LPARAM, bool isMouseHWheel);
+    bool verticalScroll(WPARAM, LPARAM);
+    bool horizontalScroll(WPARAM, LPARAM);
     bool gesture(WPARAM, LPARAM);
     bool gestureNotify(WPARAM, LPARAM);
     bool execCommand(WPARAM wParam, LPARAM lParam);
@@ -918,6 +920,8 @@ protected:
     LRESULT onIMERequestCharPosition(WebCore::Frame*, IMECHARPOSITION*);
     LRESULT onIMERequestReconvertString(WebCore::Frame*, RECONVERTSTRING*);
     bool developerExtrasEnabled() const;
+
+    bool shouldInitializeTrackPointHack();
 
     // AllWebViewSet functions
     void addToAllWebViewsSet();
